<resources>
    <string name="app_name">SwiftRecharge App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user_header_title">UserName</string>
    <string name="user_email_header">example@yahoo.com</string>
    <string name="menu_manage_meters">Manage Meters</string>
    <string name="usage_history">Credit Usage History</string>
    <string name="all_meters">All meters</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="email_address">Email address</string>
    <string name="password_confirm">Confirm password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="add_meter">ADD METER</string>
    <string name="view_meters">VIEW METERS</string>
    <string name="request_meter">REQUEST NEW METER</string>
    <string name="request_malfunction">REQUEST MALFUNCTION</string>
</resources>
