<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        app:srcCompat="@drawable/launcher"
        android:contentDescription="@string/app_name"
        app:layout_constraintHorizontal_bias="0.500"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_address"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        android:layout_marginTop="50dp"
        android:inputType="textEmailAddress"
        android:background="@android:color/holo_green_light"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:drawableStart="@android:drawable/ic_menu_call"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:background="@android:color/holo_green_light"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawableEnd="@drawable/baseline_visibility_off_24"
        />
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        />

</android.support.constraint.ConstraintLayout>