<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.constraint.ConstraintLayout
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        app:srcCompat="@drawable/launcher"
        android:contentDescription="@string/app_name"
        app:layout_constraintHorizontal_bias="0.500"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_address"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:background="@android:color/holo_green_light"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:drawableStart="@android:drawable/sym_action_email"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/mobile_number"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="15dp"
        android:inputType="number"
        android:background="@android:color/holo_green_light"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:drawableStart="@android:drawable/ic_menu_call"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:background="@android:color/holo_green_light"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawableEnd="@drawable/baseline_visibility_off_24"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password_confirm"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:background="@android:color/holo_green_light"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawableEnd="@drawable/baseline_visibility_off_24"
        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        />

</android.support.constraint.ConstraintLayout>

<ProgressBar
android:visibility="gone"
android:id="@+id/progressBar"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_centerHorizontal="true"
android:layout_centerVertical="true"
app:layout_constraintTop_toBottomOf="@+id/register_layout"
   app:layout_constraintEnd_toEndOf="parent"
    />

</android.support.constraint.ConstraintLayout>
