<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/addMeterCard"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.27"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/design_default_color_primary"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        card_view:cardUseCompatPadding="true"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_meter"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/addMeterCard"
        app:layout_constraintStart_toEndOf="@+id/addMeterCard"
        android:id="@+id/viewMetersCard"
        android:layout_marginStart="50dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/design_default_color_primary"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        card_view:cardUseCompatPadding="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/view_meters"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            />

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/viewMetersCard"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/requestMetersCard"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:layout_constraintHorizontal_bias="0.27"
        app:cardBackgroundColor="@color/design_default_color_primary"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        card_view:cardUseCompatPadding="true"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/request_meter"
        android:id="@+id/requestNewMeter"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        />

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/requestMetersCard"
        app:layout_constraintStart_toEndOf="@+id/requestMetersCard"
        android:id="@+id/requestMalfunctionCard"
        android:layout_marginStart="50dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/design_default_color_primary"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        card_view:cardUseCompatPadding="true"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_malfunction"
                android:id="@+id/requestMalfunction"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
